<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_default_curve_13dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp">

        <ImageView
            android:id="@+id/rd_car"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/red_car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/lite_4_seats"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rd_car"
            app:layout_constraintStart_toEndOf="@+id/rd_car"
            app:layout_constraintTop_toTopOf="@+id/rd_car" />

        <ImageView
            android:id="@+id/fnote"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/fnote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/fnote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fnote"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/yellow_car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rd_car" />

        <ImageView
            android:id="@+id/f_one_note"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/fnote"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/f_two_note"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/fnote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fnote"
            app:layout_constraintTop_toTopOf="@+id/f_one_note" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/fnote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/f_two_note"
            app:layout_constraintTop_toTopOf="@+id/f_one_note" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_ride_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/select_ride"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_one_note" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            android:text="@string/premium_6_seats" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>